change structure head menu, add search input in blog page, add image in clients blog of home page

--- a/app/parts/home/clients.html
+++ b/app/parts/home/clients.html
@@ -93,7 +93,7 @@
 
             </div>
         </div>
-        <div class="row justify-content-between">
+        <div class="row justify-content-between align-items-center">
             <div class="col-md-6 col-lg-5">
                 <p>
                     Nautilus specializes in Asterisk Technology and is the only Asterisk Certified Company accredited by Digium in Asia.
@@ -102,9 +102,10 @@
                 </p>
             </div>
             <div class="col-md-6 col-lg-5">
-                <div class="clients__alert">
+                <img src="./images/dist/clients-img.png" alt="">
+                <!-- <div class="clients__alert">
                     Empower your business with our affordable, flexible and professional cloud phone service. Experience seamless communications without boundaries.
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
