--- a/app/parts/studies/advertisement.html
+++ b/app/parts/studies/advertisement.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="advertisement__inner">
             <div class="row">
-                <div class="col-xl-7">
+                <div class="col-lg-8 col-xl-8">
                     <h2 class="advertisement__title">
                         Choose to connect better with the best cloud communications provider in the market today.
                     </h2>
@@ -11,7 +11,7 @@
                     </a>
                 </div>
             </div>
-            <div class="advertisement__img advertisement__img--top">
+            <div class="advertisement__img">
                 <img src="./images/dist/advertisement-img-3.png" alt="">
             </div>
         </div>
