--- a/app/parts/finance/brands.html
+++ b/app/parts/finance/brands.html
@@ -1,18 +1,34 @@
 <section class="brands block">
     <div class="container">
         <div class="brands__title">Trusted by brands of all shapes and sizes</div>
-        <div class="row justify-content-center align-items-center">
-            <div class="col-4 text-center col-xl-3">
-                <img src="./images/dist/webull.png" alt="">
+        <div class="swiper brands-swiper">
+            <div class="swiper-wrapper justify-content-center">
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/webull.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/vertex-2.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/tiger-brokers.png" alt="">
+                </div>
             </div>
-            <div class="col-4 text-center col-xl-3">
-                <img src="./images/dist/vertex-2.png" alt="">
+            <div class="swiper-button-next brands-button-next brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
             </div>
-            <div class="col-4 text-center col-xl-3">
-                <img src="./images/dist/tiger-brokers.png" alt="">
+            <div class="swiper-button-prev brands-button-prev brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                </svg>
             </div>
-
         </div>
+
         <p class="brands__description">
             Fintech, banking, and insurance companies trust Nautilus with their communication needs. Whether you’re a startup or an established player in your field, seamless customer experiences should always be top of mind. Our Nautilus Talk (a premier web calling experience built into Zendesk) lets you achieve that and more.
         </p>
