--- a/app/parts/header-block.html
+++ b/app/parts/header-block.html
@@ -11,24 +11,68 @@
                     <!-- wp_nav_menu() - primary-menu -->
                     <div class="menu-primary-menu-container">
                         <ul class="menu primary-menu" id="primary-menu">
-                            <li class="menu-item">
+                            <li class="menu-item menu-item-has-children">
                                 <a href="./story.html">Our Story</a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="./meet.html">Meet Out Team</a>
+                                    </li>
+                                </ul>
                             </li>
-
-                            <li class="menu-item">
-                                <a href="./solution.html">Our Solutions</a>
+                            <li class="menu-item menu-item-has-children">
+                                <a href="">Our Solutions</a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="./finance.html">Finance</a>
+                                    </li>
+                                </ul>
                             </li>
-                            <li class="menu-item">
-                                <a href="./resources.html">Resources</a>
-                            </li>
-                            <li class="menu-item">
+                            <li class="menu-item menu-item-has-children">
                                 <a href="./plans.html">Our Plans</a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="./cloud.html">Cloud Telephony</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./center.html">Contact Center</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./talk.html">Nautilus Talk Basic</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./zendesk.html">Zendesk</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./telephony.html">Nautilus Cloud Telephony</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./contact-center.html">Nautilus Contact Center</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./basic.html">Nautilus Talk Basic Feature List</a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                            <li class="menu-item menu-item-has-children">
+                                <a href="">Resources</a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="./studies.html">IDD Rates</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./studies.html">Case Studies</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="./blog.html">Blog</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu-item">
                                 <a href="./contacts.html">Contact Us</a>
                             </li>
                             <li class="menu-item">
-                                <a href="./help.html">Help Center</a>
+                                <a href="https://pdi-nautilussip.zendesk.com/hc/en-us" target="_blank">Help Center</a>
                             </li>
                         </ul>
                     </div>
