--- a/app/parts/studies/brands.html
+++ b/app/parts/studies/brands.html
@@ -1,25 +1,42 @@
 <section class="brands block">
     <div class="container">
         <div class="brands__title">Trusted by over 1000 companies</div>
-        <div class="row justify-content-between">
-            <div class="col-auto">
-                <img src="./images/dist/brand-1.png" alt="" class="brands__img">
+        <div class="swiper brands-swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-1.png" alt="" class="brands__img">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-2.png" alt="" class="brands__img">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-3.png" alt="" class="brands__img">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-4.png" alt="" class="brands__img">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-5.png" alt="" class="brands__img">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/brand-6.png" alt="" class="brands__img">
+                </div>
             </div>
-            <div class="col-auto">
-                <img src="./images/dist/brand-2.png" alt="" class="brands__img">
+            <div class="swiper-button-next brands-button-next brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
             </div>
-            <div class="col-auto">
-                <img src="./images/dist/brand-3.png" alt="" class="brands__img">
-            </div>
-            <div class="col-auto">
-                <img src="./images/dist/brand-4.png" alt="" class="brands__img">
-            </div>
-            <div class="col-auto">
-                <img src="./images/dist/brand-5.png" alt="" class="brands__img">
-            </div>
-            <div class="col-auto">
-                <img src="./images/dist/brand-6.png" alt="" class="brands__img">
+            <div class="swiper-button-prev brands-button-prev brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                </svg>
             </div>
         </div>
+
     </div>
 </section>
