--- a/app/parts/zendesk/brands.html
+++ b/app/parts/zendesk/brands.html
@@ -1,28 +1,45 @@
 <section class="brands block">
     <div class="container">
         <div class="brands__title">Trusted by brands of all shapes and sizes</div>
-        <div class="row justify-content-center justify-content-lg-between align-items-center">
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/afeli.png" alt="">
+        <div class="swiper brands-swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/afeli.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/fair-price.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/deloitte.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/psychology-hub.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/nippon-paint.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/lhn.png" alt="">
+                </div>
+                <div class="swiper-slide brands-slide">
+                    <img src="./images/dist/get-go.png" alt="">
+                </div>
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/fair-price.png" alt="">
+            <div class="swiper-button-next brands-button-next brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/deloitte.png" alt="">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/psychology-hub.png" alt="">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/nippon-paint.png" alt="">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/lhn.png" alt="">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-auto text-center">
-                <img src="./images/dist/get-go.png" alt="">
+            <div class="swiper-button-prev brands-button-prev brands-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                </svg>
             </div>
         </div>
+
     </div>
 </section>
